add_executable(IPM IPM.cpp)
add_dependencies(IPM ${catkin_EXPORTED_TARGETS})
target_link_libraries(IPM ${catkin_LIBRARIES})

install(
    TARGETS IPM
    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
    LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
    RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
